# bot-ia

./: .editorconfig  .env.exemple  .gitignore  LICENSE  docker-compose.yaml  dockerfile  pyproject.toml  remove_cache.py
.docker/: start-app.sh  tagging.py
src/: __init__.py
src/core/__seedwork/application/: use_cases.py
src/core/__seedwork/domain/: entities.py
src/core/__seedwork/infra/db/peewee/: base.py
src/core/__seedwork/infra/http/: __init__.py
src/core/__seedwork/infra/http/contracts/: http.py
src/core/__seedwork/infra/http/requests/: __init__.py
src/core/audio_to_text/application/: use_cases.py
src/core/audio_to_text/infra/speech_recognition/: __init__.py
src/core/availability/application/: use_cases.py
src/core/availability/infra/viacep/: __init__.py
src/core/boleto/application/: use_cases.py
src/core/boleto/infra/pdf/pdfkit/: generate_pdf.py  html_generation.py
src/core/clients/application/: use_cases.py
src/core/clients/infra/db/peewee/: clients_model.py  clients_repository.py
src/core/payments/application/: use_cases.py
src/core/payments/infra/db/peewee/: payments_model.py  payments_repository.py
src/core/text_generation/application/: use_cases.py
src/core/text_generation/infra/chatter/: generate.py  train.py
src/core/text_generation/infra/openia/: catnet.csv  catnet_embedding.csv  generate.py
src/core/text_matcher/application/: use_cases.py
src/core/text_matcher/domain/: matcher.py
src/core/text_matcher/infra/spacy/: matcher.py
src/telegram/: __init__.py  buttons.py  forms.py  menus.py
(+3 files in other folders)
